@@ -1,5 +1,5 @@
 #
-# $Id: xpTheme.tcl,v 1.6.2.2 2009/05/14 00:53:04 patthoyts Exp $
+# $Id: xpTheme.tcl,v 1.6.2.3 2009/12/03 23:58:35 patthoyts Exp $
 #
 # Settings for 'xpnative' theme
 #
@@ -35,6 +35,18 @@ namespace eval ttk::theme::xpnative {
 	ttk::style map Treeview \
 	    -background [list selected SystemHighlight] \
 	    -foreground [list selected SystemHighlightText] ;
+
+        ttk::style configure Row -background SystemWindow
+        ttk::style configure Cell -background SystemWindow
+        ttk::style map Row \
+            -background [list selected SystemHighlight] \
+            -foreground [list selected SystemHighlightText] ;
+        ttk::style map Cell \
+            -background [list selected SystemHighlight] \
+            -foreground [list selected SystemHighlightText] ;
+        ttk::style map Item \
+ 	    -background [list selected SystemHighlight] \
+ 	    -foreground [list selected SystemHighlightText] ;
 
 	ttk::style configure TLabelframe.Label -foreground "#0046d5"
 
